# phase3

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 01469e6769ef_add_closed_at_to_task_model.py  6a1840e0b0b0_create_initial_tables_for_project_and_.py
app/: main.py
app/api/: deps.py  routers.py
app/api/controllers/: projects_controller.py  tasks_controller.py
app/api/schemas/requests/: __init__.py  project_request.py  task_request.py
app/api/schemas/responses/: __init__.py  project_response.py  task_response.py
app/cli/: console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: base.py  session.py
app/exceptions/: base.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: __init__.py  project_service.py  task_service.py
