[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "amir",email = "amiralifakhari9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.0)",    
    "alembic (>=1.13.0)",      
    "psycopg2-binary (>=2.9.0)",      
    "schedule (>=1.2.2,<2.0.0)",
    "fastapi (>=0.110.0)",   
    "uvicorn (>=0.27.0)"     
]

[tool.poetry.scripts]
start = "app.main:main"
schedule = "app.commands.scheduler:start_scheduler"
# در مراحل بعد شاید اسکریپتی برای اجرای وب سرور اضافه کنیم

[tool.poetry]
packages = [{include = "app"}]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
